@@ -16,6 +16,10 @@ Core and builtins
   set to a custom object whose write() method happens to install
   another file in sys.stdout.
 
+- Issue #3088: Corrected a race condition in classes derived from
+  threading.local: the first member set by a thread could be saved in
+  another thread's dictionary.
+
 - Issue #3100: Corrected a crash on deallocation of a subclassed weakref which
   holds the last (strong) reference to its referent.
 
